# hale

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .npmrc  LICENSE  README.md  RESEARCH_KNOWLEDGE_BASE.md  app.config.ts  app.json  babel.config.js  drizzle.config.ts  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci-compute-engine.yml  ci.yml  deploy-backend.yml  deploy-inspector.yml  deploy-pipeline-worker.yml  uptime.yml
app/: app.tsx
app/components/: BarSeriesChart.tsx  Button.tsx  DetailScreenHeader.tsx  GlassCard.tsx  Header.tsx  HypnogramChart.tsx  InlineLineChart.tsx  LocalDbDiagnostics.tsx  MetricRing.tsx  SleepHeartRateChart.tsx  StatusPill.tsx  Text.tsx
app/constants/: journalFactors.ts
app/context/: AuthContext.tsx  DashboardContext.tsx
app/navigators/: AppNavigator.tsx  MainNavigator.tsx  navigationTypes.ts  useNavigationTheme.ts
app/screens/: DebugInspectorScreen.tsx  DeviceScreen.tsx  DeviceSettingsScreen.tsx  HomeScreen.tsx  (+11 more)
apps/compute-engine/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.worker  cloudbuild.worker.yaml  cloudbuild.worker.yaml.bak
apps/compute-engine/benches/: derived_metrics.rs
apps/compute-engine/src/: calendar.rs  derived_metrics.rs  ffi.rs  full_pipeline.rs  handlers.rs  lib.rs  main.rs  types.rs
apps/compute-engine/src/math/: activity.rs  activity_detect.rs  core_temperature.rs  epoch_features.rs  hrv.rs  mod.rs  recovery_index.rs  sensor_sample.rs  skin_temp.rs  sleep_consistency.rs  sleep_detect.rs  sleep_stages.rs  spo2.rs  spo2_events.rs  strain.rs  stress.rs  timestamp_slice.rs  training_load.rs  util.rs  wellness_scoring.rs
apps/compute-engine/src/pipeline/: context.rs  dirty.rs  ledger.rs  mod.rs  stage.rs  types.rs
apps/compute-engine/src/pipeline/stages/: activity_detect.rs  derived_metrics.rs  mod.rs  sleep_detect.rs  sleep_stages.rs  wellness.rs
apps/compute-engine/tests/: calendar.rs  ffi.rs  full_pipeline.rs  golden.rs  http.rs
apps/compute-engine/tests/fixtures/: calendar.json
apps/compute-engine/tests/fixtures/compute-engine-golden/: tz-ny.json  tz-utc.json
backend/: .env.example  Dockerfile  package-lock.json  package.json
docs/: app-integrity-security-plan.md  ble-patterns-research.md  build-knowledge.mjs  code-review-session.md  competitor-screens-research-2026-05-28.md  current-secondary-screens-audit-2026-05-28.md  feature-matrix-audit.md  knowledge-base-inventory-2026-05-28.md  knowledge.html  phase-6-research.md  secondary-screens-master-plan-2026-05-28.md  secondary-screens-status-2026-05-31.md  user-journey-and-feature-graph-2026-05-28.md  whoop-ble-protocol-reference.md  whoop-community-research.md  whoop-trim-ack-investigation.md
inspector/: package-lock.json  package.json
ios/: Podfile
research/: README.md  reacticx-component-catalog.md  screen-inventory.md  whoop-features-deep-dive.md
(+787 files in other folders)
