[package]
name = "noop-compute-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[[bin]]
name = "noop-compute-engine"
path = "src/main.rs"

[[bin]]
name = "parity"
path = "src/bin/parity.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "decompression-gzip", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"
reqwest = { version = "0.12", features = ["json", "gzip"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "derived_metrics"
harness = false
